rendering some goats

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,7 +7,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: $blue;
+  background-color: $limegreen;
 }
 
 code {
@@ -16,5 +16,5 @@ code {
 }
 
 .App{
-  background-color: $blue;
+  background-color: $limegreen;
 }
